--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@
 
 
 .newspaper-container {
-    width: 700px;
+
+    width: 75%;
     border-radius: 10px 20px 30px 40px;
-    box-shadow: #270202;
+    box-shadow: 5em 5em .5em #ddd;
     padding: 10px;  
     margin: 0 auto;
+    background: white;
     
 }
+main img{
+    width:100%;
+}
+
+
+
 
 .header {
     
@@ -19,7 +27,7 @@
 
     display: inline-block;
     text-align: center;
-    width: 700px;
+    width: 850px;
     padding: 10px;
     list-style: none;      
  
@@ -29,22 +37,22 @@
     margin: auto;
     padding: 0;
     list-style: none;
-    text-align: center;
     border-top: solid;
     border-bottom: solid;
-    border-width: 1px
-    
+    border-width: 1px;
 }
 
 .nav ul li{
     display: inline-block;
     padding: .4em; 
+    color: #902222;
+
    
 }
 
 .nav ul li a{
     text-decoration: none;
-    color:#777;
+    color: #eee;
 
    
 }
@@ -52,8 +60,9 @@
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: #f6f4f4 ;
-}s
+    background: #eee ;
+    margin:auto;
+}
 
 h1, h2, h3, h4, h5 {
     font-family: 'Abril Fatface', cursive;
@@ -65,8 +74,22 @@ h1, h2, h3, h4, h5 {
 
 
 .more-articles {
-    display: inline-block;
-    
+    text-align: center;
 
+}
+.more-articles section{
+    display: inline-block;
+    width:40%;
+    margin:0em .5em;
+
+}
+.more-articles img{
+    width:100%
+
+}
+
+.more-articles p {
+    text-align: justigy;
+    padding:0em .5em;
 
 }
